K8S/platform-depl.yaml
# Kubernetes deployment configuration for the PlatformService application
# The Deployment is configured to use the Docker image "meenumee/platformservice:latest" and exposes port 80 for the application.

# To apply this deployment configuration to your Kubernetes cluster, you can use the following command:
# kubectl apply -f platform-depl.yaml 
# After applying the deployment, you can check the status of the deployment and the running pods using:
# kubectl get deployments
# kubectl get pods  

# The Deployment resource is defined with the following specifications:
# - apiVersion: Specifies the API version of the Kubernetes resource (apps/v1 for Deployments).
# - kind: Specifies the type of Kubernetes resource (Deployment).
# - metadata: Contains metadata about the resource, such as its name.
# - spec: Contains the specifications for the Deployment, including the number of replicas, the selector for matching pods, and the template for the pod specification.
# - replicas: Specifies the desired number of pod replicas to run for the application (in this case, 3).
# - selector: Defines how to identify the pods that belong to this Deployment using labels.
# - matchLabels: Specifies the labels that must be present on the pods for them to be managed by this Deployment (in this case, app: platformservice) meaning that any pod with the label "app: platformservice" will be managed by this Deployment.
# - template: Defines the pod template, which includes metadata and the specification for the containers that will run in the pods. The pod template is used to create the pods that will run the application. It consists of:
# - metadata: Contains metadata for the pod template. Pod templates are used to define the configuration of the pods that will be created by the Deployment. 
# The metadata section of the pod template can include labels, which are key-value pairs that can be used to organize and select resources in Kubernetes. In this case, the pod template has a label "app: platformservice", which matches the selector defined in the Deployment spec. This means that any pods created from this template will have the label "app: platformservice" and will be managed by this Deployment.
# - spec: Contains the specifications for the pod, including the container configuration. The spec section of the pod template defines the configuration for the containers that will run in the pods created by the Deployment. This includes details such as the container image to use, the ports to expose, and any environment variables or volume mounts needed for the application to run properly.
# - containers: Specifies the container configuration, including the name, image, and ports to expose for the application.  

apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers: 
      - name: platformservice
        image: meenumee/platformservice:latest
        ports:
          - containerPort: 8080
# Note: The containerPort is set to 8080, which means that the application inside the container is listening on port 8080. The Service defined in the platform-np-srv.yaml file will route traffic to this port on the pods created by this Deployment.
---
# This YAML file defines a Kubernetes Service of type ClusterIP for the PlatformService application.
# The Service is configured to expose port 80 for the application and route traffic to the pods that are labeled with "app: platformservice".
# To apply this service configuration to your Kubernetes cluster, you can use the following command:
# kubectl apply -f platform-depl.yaml
# port forwarding to the service can be done using:
# kubectl port-forward service/platform-clusterip-srv 8080:80
# port :80 meaning that the service will listen on port 80, and targetPort: 8080 means that the service will route traffic to port 8080 on the pods that are selected by the service (in this case, the pods created by the platform-depl Deployment).
apiVersion: v1
kind: Service
metadata:
  name: platform-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
